--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "imf-app",
   "version": "1.0.0",
   "dependencies": {
+    "typescript": "^5.7.3",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
