--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
